--- a/profilepage/src/components/Barchart.module.css
+++ b/profilepage/src/components/Barchart.module.css
@@ -1,6 +1,12 @@
 .barchart {
-    margin: 8rem;
+    margin: 9rem;
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
+}
+
+@media only screen and (max-width: 1000px) {
+    .barchart {
+        padding-top: 2rem;
+    }
 }
