--- a/profilepage/src/components/Profile.module.css
+++ b/profilepage/src/components/Profile.module.css
@@ -1,5 +1,13 @@
 .profile {
-    padding-top: 8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 7rem;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
 }
 
 .fetched {
@@ -16,6 +24,6 @@
 
 @media only screen and (max-width: 1000px) {
     .profile {
-        padding-top: 11rem;
+        margin-top: 11rem;
     }
 }
