--- a/profilepage/src/components/Linechart.module.css
+++ b/profilepage/src/components/Linechart.module.css
@@ -1,12 +1,17 @@
 .linechart {
-    margin: 9rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 7rem;
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
+    width: 80%;
 }
 
 @media only screen and (max-width: 1000px) {
     .linechart {
-        padding-top: 2rem;
+        margin-top: 11rem;
     }
 }
