--- a/profilepage/src/components/Navbar.module.css
+++ b/profilepage/src/components/Navbar.module.css
@@ -1,6 +1,7 @@
 .pages {
     height: 6rem;
     width: 100%;
+    translate: -50%;
     position: fixed;
     top: 0;
     background-color: black;
@@ -29,7 +30,6 @@
 }
 
 .pages li a:hover {
-    padding-bottom: 1rem;
     color: rgb(220, 249, 0);
     transition: color 0.5s ease;
 }
