--- a/profilepage/src/components/Projects.module.css
+++ b/profilepage/src/components/Projects.module.css
@@ -1,4 +1,4 @@
-.home {
+.projects {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,7 +11,7 @@
 }
 
 @media only screen and (max-width: 1000px) {
-    .home {
+    .projects {
         margin-top: 11rem;
     }
 }
