--- a/profilepage/src/components/Profile.module.css
+++ b/profilepage/src/components/Profile.module.css
@@ -22,6 +22,11 @@
     align-items: center;
 }
 
+td {
+    padding-left: .5rem;
+    padding-right: .5rem;
+}
+
 @media only screen and (max-width: 1000px) {
     .profile {
         margin-top: 11rem;
