--- a/profilepage/src/components/Cv.module.css
+++ b/profilepage/src/components/Cv.module.css
@@ -27,7 +27,7 @@ td a {
 }
 
 tr {
-    background-color: azure;
+    background-color: rgb(250, 250, 250);
 }
 
 @media only screen and (max-width: 1000px) {
