--- a/profilepage/src/components/Projects.module.css
+++ b/profilepage/src/components/Projects.module.css
@@ -10,6 +10,11 @@
     width: 80%;
 }
 
+.projects a {
+    text-decoration: none;
+    color: black;
+}
+
 @media only screen and (max-width: 1000px) {
     .projects {
         margin-top: 11rem;
