--- a/profilepage/src/components/Home.module.css
+++ b/profilepage/src/components/Home.module.css
@@ -26,3 +26,9 @@
         max-width: 30rem;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .home {
+        max-width: 20rem;
+    }
+}
