--- a/profilepage/src/components/Linechart.module.css
+++ b/profilepage/src/components/Linechart.module.css
@@ -15,3 +15,9 @@
         margin-top: 11rem;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .linechart {
+        width: 200%;
+    }
+}
