--- a/profilepage/src/components/Navbar.module.css
+++ b/profilepage/src/components/Navbar.module.css
@@ -1,7 +1,7 @@
 .pages {
     height: 6rem;
     width: 100%;
-    translate: -50%;
+    /* translate: -50%; */
     position: fixed;
     top: 0;
     background-color: black;
@@ -68,5 +68,29 @@
 
     .logo {
         justify-content: right;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+
+    .pages ul {
+        padding-left: 1.5rem;
+    }
+
+    .pages li {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .logo {
+        margin: auto 1rem auto 0;
+        position: absolute;
+        bottom: -.45rem;
+        right: -1rem;
+        
+    }
+    
+    .logo img {
+        width: 150px;
     }
 }
